--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
         "prod": "npm run production",
         "production": "mix --production"
     },
-    "devDependencies": {
-        "@prettier/plugin-php": "^0.18.4",
+    "dependencies": {
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7",
+        "@tailwindcss/aspect-ratio": "^0.4.0",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.13",
+        "resolve-url-loader": "^5.0.0",
+        "tailwindcss": "^3.0.24",
+        "vue": "^3.2.33",
+        "vue-loader": "^17.0.0"
+    },
+    "devDependencies": {
+        "@prettier/plugin-php": "^0.18.4",
         "prettier": "^2.6.2",
         "prettier-plugin-tailwindcss": "^0.1.11"
     }
