--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "inertiajs/inertia-laravel": "^0.6.0",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "temporal/sdk": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
