--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "resolve-url-loader": "^5.0.0",
         "tailwindcss": "^3.0.24",
         "vue": "^3.2.33",
-        "vue-loader": "^17.0.0"
+        "vue-loader": "^17.0.0",
+        "watch": "^1.0.2"
     },
     "devDependencies": {
         "@prettier/plugin-php": "^0.18.4",
