--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "autoprefixer": "^10.4.7",
         "axios": "^0.25",
+        "laravel-echo": "^1.11.7",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.13",
+        "pusher-js": "^7.1.1-beta",
         "resolve-url-loader": "^5.0.0",
         "tailwindcss": "^3.0.24",
         "vue": "^3.2.33",
