--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "autoprefixer": "^10.4.7",
         "axios": "^0.25",
+        "laravel-echo": "^1.11.7",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.13",
+        "pusher-js": "^7.1.1-beta",
         "resolve-url-loader": "^5.0.0",
         "tailwindcss": "^3.0.24",
         "vue": "^3.2.33",
-        "vue-loader": "^17.0.0"
+        "vue-loader": "^17.0.0",
+        "watch": "^1.0.2"
     },
     "devDependencies": {
         "@prettier/plugin-php": "^0.18.4",
