--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
  push_to_registry:
-   name: Push Docker image to Docker Hub
+   name: Push docker image to github container registry
    runs-on: ubuntu-latest
    steps:
      - name: Check out the repo
@@ -31,5 +31,3 @@ jobs:
          push: true
          tags: ${{ steps.meta.outputs.tags }}
          labels: ${{ steps.meta.outputs.labels }}
-         tag-sha: true
-         tag-latest: true
